implemented e2e tests (closes #139)